--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 mean/node_modules/
-day2/expressd/generator/myapp/node_modules
 
 day2\expressd\casestudy\node_modules
+
+day3\generator\angularapp\node_modules
